Fixed profile image stretching

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -140,6 +140,7 @@
 
 .prof-icon {
   position: relative;
+  object-fit: cover;
   width: 100px;
   height: 100px;
   margin: 0 auto;
